--- a/layouts/partials/footer/script-footer.html
+++ b/layouts/partials/footer/script-footer.html
@@ -122,4 +122,6 @@
   {{ partial "footer/cses-script.html" . -}}
 {{ else if eq .Page.Type "gym" -}}
   {{ partial "footer/gym-script.html" . -}}
+{{ else if eq .Page.Type "fullRatings" -}}
+  {{ partial "footer/fullRatings-script.html" . -}}
 {{ end -}}
