add dummy for css

--- a/layouts/fullRatings/single.html
+++ b/layouts/fullRatings/single.html
@@ -43,6 +43,17 @@
       {{ end }}
     </ul>
   </div>
+  <div id="dummy-styles" style="display: none;">
+    <span class="rating-red">Dummy</span>
+    <span class="rating-blue">Dummy</span>
+    <span class="rating-green">Dummy</span>
+    <span class="rating-orange">Dummy</span>
+    <span class="rating-purple">Dummy</span>
+    <span class="rating-gray">Dummy</span>
+    <span class="rating-cyan">Dummy</span>
+    <span class="rating-black">Dummy</span>
+  </div>
+
 
   <div class="filters">
     <label>
