--- a/layouts/gym/single.html
+++ b/layouts/gym/single.html
@@ -24,6 +24,17 @@
     {{ end }}
   </ul>
 </div>
+<div id="dummy-styles" style="display: none;">
+  <span class="rating-red">Dummy</span>
+  <span class="rating-blue">Dummy</span>
+  <span class="rating-green">Dummy</span>
+  <span class="rating-orange">Dummy</span>
+  <span class="rating-purple">Dummy</span>
+  <span class="rating-gray">Dummy</span>
+  <span class="rating-cyan">Dummy</span>
+  <span class="rating-black">Dummy</span>
+</div>
+
 
 <div class="container-fluid row justify-content-center text-center">
   <div class="container-fluid row justify-content-center text-center">
