--- a/layouts/fullRatings/single.html
+++ b/layouts/fullRatings/single.html
@@ -104,6 +104,17 @@
 
       </tbody>
     </table>
+    <table class="table table-sm table-bordered codeforces-table mx-2" id="codechef-standings">
+      <thead>
+        <tr>
+          <th></th>
+          <th><span style="font-weight: bold;">U</span></th>
+          <th><span class="rating-3000"><span class="rating-red">C</span>odechef <span class="rating-red">R</span>ating</span></th>
+        </tr>
+      </thead>
+      <tbody id="codechef-tbody">
+      </tbody>
+    </table>
     </div>
   </div>  
   </div>
