--- a/layouts/fullRatings/single.html
+++ b/layouts/fullRatings/single.html
@@ -115,6 +115,17 @@
       <tbody id="codechef-tbody">
       </tbody>
     </table>
+    <table class="table table-sm table-bordered codeforces-table mx-2" id="luogu-standings">
+      <thead>
+        <tr>
+          <th></th>
+          <th><span style="font-weight: bold;">U</span></th>
+          <th><span class="rating-3000"><span class="rating-red">L</span>uogu <span class="rating-red">R</span>ating</span></th>
+        </tr>
+      </thead>
+      <tbody id="luogu-tbody">
+      </tbody>
+    </table>
     </div>
   </div>  
   </div>
