--- a/layouts/icpcing/single.html
+++ b/layouts/icpcing/single.html
@@ -48,6 +48,20 @@ font-size: 18px;
 color: gold;
 }
 
+.tippy-box .rating-blue {
+    color: #4ea4f5 !important;
+}
+.tippy-box .rating-purple {
+    color: #c084fc !important;
+}
+.tippy-box .rating-green {
+    color: #5efb8f !important;
+}
+
+.tippy-box .rating-red {
+    color: #ff6b6b !important;
+}
+
 </style>
 <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/dist/tippy.css" />
 <script src="https://unpkg.com/@popperjs/core@2"></script>
